--- a/src/styles/contentList.css
+++ b/src/styles/contentList.css
@@ -1,16 +1,6 @@
-.contentList {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	margin: auto;
-	justify-content: center;
-	align-items: center;
-	gap: 25px;
-}
-
 .contentCard {
-	width: 200px;
-	height: 300px;
+	height: 35vh;
+	background-size: cover;
 	border-radius: 25px;
 	overflow: hidden;
 	cursor: pointer;
