--- a/src/styles/contentList.css
+++ b/src/styles/contentList.css
@@ -1,9 +1,11 @@
 .contentCard {
-	height: 35vh;
+	height: 300px;
+	width: 200px;
 	background-size: cover;
 	border-radius: 25px;
 	overflow: hidden;
 	cursor: pointer;
+	padding: 0;
 }
 
 .cardBackground {
@@ -21,4 +23,11 @@
 	font-weight: 400;
 	font-style: normal;
 	font-size: 12px;
+}
+
+@media screen and (max-width: 768px) {
+	.contentCard {
+		height: 250px;
+		width: 200px;
+	}
 }
