--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -22,27 +22,21 @@
 
 .newTrailerCard .cardText {
 	width: 100%;
-	background: rgb(42, 51, 53, 0.9);
+	backdrop-filter: blur(10px);
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
 }
 
 .mightAlsoLikeCard .cardText {
 	padding-left: 10px;
 }
 
-@media screen and (max-width: 768px) {
-	.mightAlsoLikeCard,
-	.newTrailerCard {
-		height: 150px;
-		width: 200px;
-	}
-}
-
 /* Контейнер со скроллом */
 .custom-scroll {
 	width: 300px;
 	height: 55vh;
+
 	overflow-y: auto;
-	overflow-x: auto;
 }
 
 /* Стилизация скроллбара */
@@ -57,6 +51,6 @@
 
 /* Ползунок (thumb) */
 .custom-scroll::-webkit-scrollbar-thumb {
-	background: #32434e; /* Цвет ползунка */
+	background: #ffffff; /* Цвет ползунка */
 	border-radius: 5px; /* Закругление ползунка */
 }
